# open_hero

./: .gitignore  Cargo.toml  README.md  config.json
songs/Star/: notes.chart  song.ini
songs/openchordtest/: notes.chart  song.ini
src/: chart.rs  config.rs  controllers.rs  input.rs  main.rs  render.rs  song.rs
