[package]
name = "open_hero"
version = "0.1.0"
edition = "2024"

[dependencies]
gilrs = "0.11.0"
kira = "0.10.8"
macroquad = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev.package.kira]
opt-level = 3

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-format-ogg]
opt-level = 3

[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3

[profile.dev.package.symphonia-bundle-flac]
opt-level = 3

[profile.dev.package.symphonia-codec-pcm]
opt-level = 3